# ProyectoF-C

./: .gitignore  Albo.cpp  Albo.h  CMakeLists.txt  Centella.cpp  Centella.h  Criatura.cpp  Criatura.h  DiagramasUML.md  HistorialSimulaciones.json  Metamorfita.cpp  Metamorfita.h  Mundo.cpp  Mundo.h  README.md  Raiz.cpp  Raiz.h  Rubrica.md  main.cpp
